@@ -1,4 +1,4 @@
-/* The following code was generated by JFlex 1.4.3 on 18.10.09 22:57 */
+/* The following code was generated by JFlex 1.4.3 on 31.03.10 04:12 */
 
 /*
  * 02/15/2005
@@ -74,41 +74,39 @@ public class SquirrelTokenMakerBase extends AbstractJFlexTokenMaker {
   /** This character denotes the end of file */
   public static final int YYEOF = -1;
 
-   /** lexical states */
+  /** lexical states */
   public static final int STRING = 2;
   public static final int YYINITIAL = 0;
   public static final int MLC = 6;
   public static final int CHAR = 4;
 
-   /** 
+  /**
    * Translates characters to character classes
    */
-  private static final String ZZ_CMAP_PACKED = 
-    "\11\0\1\4\1\1\25\0\1\4\1\0\1\21\4\0\1\22\2\15"+
-    "\1\13\1\11\1\0\1\12\1\17\1\14\12\3\1\16\1\0\1\10"+
-    "\1\7\1\6\2\0\4\2\1\20\25\2\1\23\1\0\1\24\1\0"+
-    "\1\5\1\0\4\2\1\20\25\2\uff85\0";
+  private static final String ZZ_CMAP_PACKED =
+    "\11\0\1\4\1\1\25\0\1\4\1\0\1\20\4\0\1\21\2\14"+
+    "\1\12\1\10\1\0\1\11\1\16\1\13\12\3\1\15\1\0\1\7"+
+    "\1\6\1\5\2\0\4\2\1\17\25\2\1\22\1\0\1\23\1\0"+
+    "\1\2\1\0\4\2\1\17\25\2\uff85\0";
 
-  /** 
+  /**
    * Translates characters to character classes
    */
   private static final char [] ZZ_CMAP = zzUnpackCMap(ZZ_CMAP_PACKED);
 
-  /** 
+  /**
    * Translates DFA states to action switch labels.
    */
   private static final int [] ZZ_ACTION = zzUnpackAction();
 
   private static final String ZZ_ACTION_PACKED_0 =
-    "\10\0\1\1\1\2\1\1\1\3\1\4\7\5\1\6"+
+    "\4\0\1\1\1\2\1\1\1\3\1\4\5\5\1\6"+
     "\1\1\1\7\1\10\1\11\1\12\1\13\1\14\1\15"+
-    "\1\13\1\16\1\17\1\13\1\20\1\13\1\1\1\3"+
-    "\1\7\1\0\1\4\3\5\1\21\1\22\1\1\1\7"+
-    "\1\0\1\12\1\23\2\13\1\24\1\7\1\0\1\7"+
-    "\1\0\1\21\1\1\1\7\1\0\1\7\1\0";
+    "\1\13\1\16\1\17\1\13\1\20\1\13\1\0\1\21"+
+    "\1\22\1\23\1\13\1\24\1\7\1\0";
 
   private static int [] zzUnpackAction() {
-    int [] result = new int[63];
+    int [] result = new int[37];
     int offset = 0;
     offset = zzUnpackAction(ZZ_ACTION_PACKED_0, offset, result);
     return result;
@@ -127,23 +125,20 @@ public class SquirrelTokenMakerBase extends AbstractJFlexTokenMaker {
   }
 
 
-  /** 
+  /**
    * Translates a state to a row index in the transition table
    */
   private static final int [] ZZ_ROWMAP = zzUnpackRowMap();
 
   private static final String ZZ_ROWMAP_PACKED_0 =
-    "\0\0\0\0\0\25\0\25\0\52\0\52\0\77\0\77"+
-    "\0\124\0\124\0\151\0\176\0\223\0\250\0\124\0\275"+
-    "\0\124\0\322\0\124\0\347\0\124\0\374\0\u0111\0\124"+
-    "\0\124\0\u0126\0\u013b\0\124\0\u0150\0\u0165\0\124\0\u017a"+
-    "\0\u018f\0\124\0\u01a4\0\151\0\176\0\u01b9\0\u01ce\0\223"+
-    "\0\124\0\124\0\124\0\u01e3\0\124\0\u01f8\0\u0111\0\u020d"+
-    "\0\u0126\0\124\0\124\0\124\0\124\0\u01b9\0\u0222\0\u0237"+
-    "\0\u0237\0\u01e3\0\u01f8\0\u024c\0\u024c\0\u0261\0\u0261";
+    "\0\0\0\24\0\50\0\74\0\120\0\120\0\144\0\170"+
+    "\0\214\0\240\0\120\0\264\0\310\0\334\0\120\0\360"+
+    "\0\u0104\0\120\0\120\0\u0118\0\u012c\0\120\0\u0140\0\u0154"+
+    "\0\120\0\u0168\0\u017c\0\120\0\u0190\0\u01a4\0\u01b8\0\120"+
+    "\0\120\0\120\0\120\0\u01cc\0\u01cc";
 
   private static int [] zzUnpackRowMap() {
-    int [] result = new int[63];
+    int [] result = new int[37];
     int offset = 0;
     offset = zzUnpackRowMap(ZZ_ROWMAP_PACKED_0, offset, result);
     return result;
@@ -160,31 +155,28 @@ public class SquirrelTokenMakerBase extends AbstractJFlexTokenMaker {
     return j;
   }
 
-  /** 
+  /**
    * The transition table of the DFA
    */
   private static final int [] ZZ_TRANS = zzUnpackTrans();
 
   private static final String ZZ_TRANS_PACKED_0 =
-    "\1\11\1\12\1\13\1\14\1\15\1\11\1\16\1\17"+
-    "\1\20\1\21\1\22\1\23\1\24\1\25\1\26\1\27"+
-    "\1\13\1\30\1\31\1\32\1\11\1\33\1\34\17\33"+
-    "\1\35\3\33\1\36\1\37\20\36\1\40\2\36\1\41"+
-    "\1\42\11\41\1\43\11\41\27\0\2\44\1\0\1\44"+
-    "\12\0\1\44\7\0\1\45\13\0\1\46\1\47\10\0"+
-    "\1\50\27\0\1\51\23\0\1\52\1\53\27\0\1\54"+
-    "\25\0\1\55\13\0\1\56\15\0\1\56\7\0\1\57"+
-    "\14\0\1\60\4\0\24\61\1\62\1\33\1\0\17\33"+
-    "\1\0\3\33\21\0\1\63\3\0\1\36\1\0\20\36"+
-    "\1\0\2\36\22\0\1\64\2\0\1\41\1\0\11\41"+
-    "\1\0\11\41\14\0\1\65\13\0\1\66\14\0\1\67"+
-    "\7\0\1\70\5\0\2\71\12\0\1\72\1\0\23\72"+
-    "\2\0\2\73\1\0\1\73\12\0\1\73\7\0\1\74"+
-    "\5\0\2\75\15\0\1\76\5\0\2\77\15\0\1\70"+
-    "\24\0\1\74\24\0\1\76\21\0";
+    "\1\5\1\6\1\7\1\10\1\11\1\12\1\13\1\14"+
+    "\1\13\1\15\1\13\1\16\1\17\1\20\1\21\1\7"+
+    "\1\22\1\23\1\24\1\5\1\25\1\26\16\25\1\27"+
+    "\3\25\1\30\1\31\17\30\1\32\2\30\1\33\1\34"+
+    "\10\33\1\35\11\33\26\0\2\7\13\0\1\7\7\0"+
+    "\1\10\12\0\1\21\1\36\10\0\1\11\25\0\1\13"+
+    "\22\0\2\13\26\0\1\37\24\0\1\40\13\0\1\7"+
+    "\14\0\1\7\7\0\1\21\13\0\1\36\4\0\23\24"+
+    "\1\41\1\25\1\0\16\25\1\0\3\25\20\0\1\42"+
+    "\3\0\1\30\1\0\17\30\1\0\2\30\21\0\1\42"+
+    "\2\0\1\33\1\0\10\33\1\0\11\33\13\0\1\43"+
+    "\13\0\1\44\4\0\2\45\12\0\1\37\1\0\22\37"+
+    "\3\0\1\44\20\0";
 
   private static int [] zzUnpackTrans() {
-    int [] result = new int[630];
+    int [] result = new int[480];
     int offset = 0;
     offset = zzUnpackTrans(ZZ_TRANS_PACKED_0, offset, result);
     return result;
@@ -222,14 +214,12 @@ public class SquirrelTokenMakerBase extends AbstractJFlexTokenMaker {
   private static final int [] ZZ_ATTRIBUTE = zzUnpackAttribute();
 
   private static final String ZZ_ATTRIBUTE_PACKED_0 =
-    "\10\0\2\11\4\1\1\11\1\1\1\11\1\1\1\11"+
-    "\1\1\1\11\2\1\2\11\2\1\1\11\2\1\1\11"+
-    "\2\1\1\11\4\1\1\0\1\1\3\11\1\1\1\11"+
-    "\2\1\1\0\1\1\4\11\1\1\1\0\1\1\1\0"+
-    "\3\1\1\0\1\1\1\0";
+    "\4\0\2\11\4\1\1\11\3\1\1\11\2\1\2\11"+
+    "\2\1\1\11\2\1\1\11\2\1\1\11\1\1\1\0"+
+    "\1\1\4\11\1\1\1\0";
 
   private static int [] zzUnpackAttribute() {
-    int [] result = new int[63];
+    int [] result = new int[37];
     int offset = 0;
     offset = zzUnpackAttribute(ZZ_ATTRIBUTE_PACKED_0, offset, result);
     return result;
@@ -401,11 +391,11 @@ public class SquirrelTokenMakerBase extends AbstractJFlexTokenMaker {
 	 * Resets the scanner to read from a new input stream.
 	 * Does not close the old reader.
 	 *
-	 * All internal variables are reset, the old input stream 
+	 * All internal variables are reset, the old input stream
 	 * <b>cannot</b> be reused (internal buffer is discarded and lost).
 	 * Lexical state is set to <tt>YY_INITIAL</tt>.
 	 *
-	 * @param reader   the new input stream 
+	 * @param reader   the new input stream
 	 */
 	public final void yyreset(java.io.Reader reader) {
 		// 's' has been updated.
@@ -448,7 +438,7 @@ public class SquirrelTokenMakerBase extends AbstractJFlexTokenMaker {
     this(new java.io.InputStreamReader(in));
   }
 
-  /** 
+  /**
    * Unpacks the compressed character translation table.
    *
    * @param packed   the packed character translation table
@@ -506,12 +496,12 @@ public class SquirrelTokenMakerBase extends AbstractJFlexTokenMaker {
 
 
   /**
-   * Returns the character at position <tt>pos</tt> from the 
-   * matched text. 
-   * 
+   * Returns the character at position <tt>pos</tt> from the
+   * matched text.
+   *
    * It is equivalent to yytext().charAt(pos), but faster
    *
-   * @param pos the position of the character to fetch. 
+   * @param pos the position of the character to fetch.
    *            A value from 0 to yylength()-1.
    *
    * @return the character at position pos
@@ -532,8 +522,8 @@ public class SquirrelTokenMakerBase extends AbstractJFlexTokenMaker {
   /**
    * Reports an error that occured while scanning.
    *
-   * In a wellformed scanner (no or only correct usage of 
-   * yypushback(int) and a match-all fallback rule) this method 
+   * In a wellformed scanner (no or only correct usage of
+   * yypushback(int) and a match-all fallback rule) this method
    * will only be called with things that "Can't Possibly Happen".
    * If this method is called, something is seriously wrong
    * (e.g. a JFlex bug producing a faulty scanner etc.).
@@ -553,7 +543,7 @@ public class SquirrelTokenMakerBase extends AbstractJFlexTokenMaker {
     }
 
     throw new Error(message);
-  } 
+  }
 
 
   /**
@@ -600,13 +590,13 @@ public class SquirrelTokenMakerBase extends AbstractJFlexTokenMaker {
       zzAction = -1;
 
       zzCurrentPosL = zzCurrentPos = zzStartRead = zzMarkedPosL;
-  
+
       zzState = zzLexicalState;
 
 
       zzForAction: {
         while (true) {
-    
+
           if (zzCurrentPosL < zzEndReadL)
             zzInput = zzBufferL[zzCurrentPosL++];
           else if (zzAtEOF) {
@@ -649,110 +639,110 @@ public class SquirrelTokenMakerBase extends AbstractJFlexTokenMaker {
       zzMarkedPos = zzMarkedPosL;
 
       switch (zzAction < 0 ? zzAction : ZZ_ACTION[zzAction]) {
-        case 19: 
+        case 19:
           { addToken(Token.PREPROCESSOR);
           }
         case 21: break;
-        case 2: 
+        case 2:
           { addNullToken(); return firstToken;
           }
         case 22: break;
-        case 20: 
+        case 20:
           { yybegin(YYINITIAL); addToken(start,zzStartRead+1, Token.COMMENT_MULTILINE);
           }
         case 23: break;
-        case 18: 
+        case 18:
           { start = zzMarkedPos-2; yybegin(MLC);
           }
         case 24: break;
-        case 4: 
+        case 4:
           { addToken(Token.WHITESPACE);
           }
         case 25: break;
-        case 14: 
+        case 14:
           { addToken(start,zzStartRead-1, Token.LITERAL_CHAR); return firstToken;
           }
         case 26: break;
-        case 9: 
+        case 9:
           { start = zzMarkedPos-1; yybegin(CHAR);
           }
         case 27: break;
-        case 7: 
+        case 7:
           { addToken(Token.LITERAL_NUMBER_FLOAT);
           }
         case 28: break;
-        case 6: 
+        case 6:
           { addToken(Token.SEPARATOR);
           }
         case 29: break;
-        case 15: 
+        case 15:
           { yybegin(YYINITIAL); addToken(start,zzStartRead, Token.LITERAL_CHAR);
           }
         case 30: break;
-        case 1: 
+        case 1:
           { addToken(Token.IDENTIFIER);
           }
         case 31: break;
-        case 12: 
+        case 12:
           { addToken(start,zzStartRead-1, Token.LITERAL_STRING_DOUBLE_QUOTE); return firstToken;
           }
         case 32: break;
-        case 17: 
+        case 17:
           { addToken(Token.COMMENT_EOL);
           }
         case 33: break;
-        case 8: 
+        case 8:
           { start = zzMarkedPos-1; yybegin(STRING);
           }
         case 34: break;
-        case 3: 
+        case 3:
           { addToken(Token.LITERAL_NUMBER_DECIMAL_INT);
           }
         case 35: break;
-        case 5: 
+        case 5:
           { addToken(Token.OPERATOR);
           }
         case 36: break;
-        case 13: 
+        case 13:
           { yybegin(YYINITIAL); addToken(start,zzStartRead, Token.LITERAL_STRING_DOUBLE_QUOTE);
           }
         case 37: break;
-        case 10: 
+        case 10:
           { addToken(Token.ERROR_IDENTIFIER); addNullToken(); return firstToken;
           }
         case 38: break;
-        case 11: 
-          { 
+        case 11:
+          {
           }
         case 39: break;
-        case 16: 
+        case 16:
           { addToken(start,zzStartRead-1, Token.COMMENT_MULTILINE); return firstToken;
           }
         case 40: break;
-        default: 
+        default:
           if (zzInput == YYEOF && zzStartRead == zzCurrentPos) {
             zzAtEOF = true;
             switch (zzLexicalState) {
             case STRING: {
               addToken(start,zzStartRead-1, Token.LITERAL_STRING_DOUBLE_QUOTE); return firstToken;
             }
-            case 64: break;
+            case 38: break;
             case YYINITIAL: {
               addNullToken(); return firstToken;
             }
-            case 65: break;
+            case 39: break;
             case MLC: {
               addToken(start,zzStartRead-1, Token.COMMENT_MULTILINE); return firstToken;
             }
-            case 66: break;
+            case 40: break;
             case CHAR: {
               addToken(start,zzStartRead-1, Token.LITERAL_CHAR); return firstToken;
             }
-            case 67: break;
+            case 41: break;
             default:
             return null;
             }
-          } 
+          }
           else {
             zzScanError(ZZ_NO_MATCH);
           }
